# planit

./: Cargo.toml  README.md
data/: db.json  todo_list.json
src/: main.rs  todo_model.rs
src/todo_model/: todo_input.rs
